--- a/asteroidsNoText.html
+++ b/asteroidsNoText.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,33 +12,10 @@
     Please use a browser that supports "canvas"
     </canvas>
 
-    <script src="webgl-utils.js"></script>
-    <script src="webgl-debug.js"></script>
-    <script src="cuon-utils.js"></script>
-    <script src="cuon-matrix.js"></script>
-    <script src="asteroidsNoText.js"></script>
+    <script src="lib/webgl-utils.js"></script>
+    <script src="lib/webgl-debug.js"></script>
+    <script src="lib/cuon-utils.js"></script>
+    <script src="lib/cuon-matrix.js"></script>
+    <script src="lib/asteroidsNoText.js"></script>
   </body>
 </html>
-=======
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Astroids</title>
-    <p id="Title">Use WASD keys to move ship, click screen to shoot.</p>
-    <p id="Score">Score: 0</p>
-  </head>
-
-  <body onload="main()">
-    <canvas id="webgl" width="400" height="400">
-    Please use a browser that supports "canvas"
-    </canvas>
-
-    <script src="webgl-utils.js"></script>
-    <script src="webgl-debug.js"></script>
-    <script src="cuon-utils.js"></script>
-    <script src="cuon-matrix.js"></script>
-    <script src="asteroidsNoText.js"></script>
-  </body>
-</html>
->>>>>>> 05a3e1154ad6fac9c0a222efa81f919ffd81fdf5
