--- a/index.html
+++ b/index.html
@@ -2,15 +2,24 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Astroids</title>
-        <p id="Title">Use WASD keys to move ship, click screen to shoot.</p>
-        <p id="Score">Score: 0</p>
+        <title>asteroids</title>
+        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+        <link rel="stylesheet" href="css/index.css">
     </head>
 
     <body onload="main()">
-        <canvas id="webgl" width="400" height="400">
-        Please use a browser that supports "canvas"
-        </canvas>
+        <div id="a">
+            <div id="b">
+                <div id="container">
+                    <canvas id="tv"    width="518" height="655" ></canvas>
+                    <canvas id="webgl" width="400" height="400" ></canvas>
+                </div>
+            </div>
+        </div>
+        <!-- <div id="container">
+            <canvas id="tv"    width="518" height="655" ></canvas>
+            <canvas id="webgl" width="400" height="400" ></canvas>
+        </div> -->
 
         <script src="./js/webgl-utils.js"></script>
         <script src="./js/webgl-debug.js"></script>
