--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>asteroids</title>
-        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
         <link rel="stylesheet" href="css/index.css">
     </head>
 
@@ -11,6 +11,7 @@
         <div id="a">
             <div id="b">
                 <div id="container">
+                    <canvas id="score" width="100" height="30"></canvas>
                     <canvas id="tv"    width="518" height="655" ></canvas>
                     <canvas id="webgl" width="400" height="400" ></canvas>
                 </div>
