--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
                     <canvas id="webgl" width="400" height="400" ></canvas>
                     <canvas id="tv" width="518" height="655" ></canvas>
                     <canvas id="overlay" width="400" height="400"></canvas>
+                    <canvas id="glare" width="400" height="400"></canvas>
                 </div>
             </div>
+        </div>
+        <div id="mobile">
+            Not supported on mobile devices
         </div>
 
         <script src="./js/webgl-utils.js"></script>
