fixed text scaling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div id="mobile">
-            Not supported on mobile devices
+            Not optimized for mobile devices
         </div>
 
         <script src="./js/webgl-utils.js"></script>
