--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                     <canvas id="tv" width="518" height="655" ></canvas>
                     <canvas id="overlay" width="400" height="400"></canvas>
                     <canvas id="glare" width="400" height="400"></canvas>
+                    <a href="https://github.com/johnprovazek/asteroids">
+                        <img id="githubimage" src="img/github.svg" width="60" height="16"/>
+                    </a>
                 </div>
             </div>
         </div>
