--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
         <title>asteroids</title>
         <link rel="icon" type="image/x-icon" href="img/favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
